fix issue where columns don't collapse into single, full-width column when page loads in smaller screen widths (start mobile/palm media queries with flex-direction column instead of row).

--- a/src/scss/grommet-core/_objects.columns.scss
+++ b/src/scss/grommet-core/_objects.columns.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+
+  @include media-query(palm) {
+    flex-direction: column;
+  }
 }
 
 .#{$grommet-namespace}columns__column {
